--- a/Registro/app/src/main/res/layout/digital_code_fragment.xml
+++ b/Registro/app/src/main/res/layout/digital_code_fragment.xml
@@ -25,7 +25,10 @@
         android:weightSum="100"
         android:gravity="center">
 
-
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/qr"/>
 
     </LinearLayout>
     <LinearLayout
@@ -38,11 +41,11 @@
         android:gravity="center">
 
         <com.unstoppable.submitbuttonview.SubmitButton
-            android:id="@+id/btnRegistrar"
+            android:id="@+id/btnTerminar"
             android:layout_width="220dp"
             android:layout_height="match_parent"
             android:padding="25dp"
-            app:buttonText="Registrar"
+            app:buttonText="Terminar"
             app:buttonTextSize="25sp"
             app:buttonColor="@color/blueBorders"
             />
