--- a/Registro/app/src/main/res/layout/digital_code_fragment.xml
+++ b/Registro/app/src/main/res/layout/digital_code_fragment.xml
@@ -26,6 +26,7 @@
         android:gravity="center">
 
         <ImageView
+            android:id="@+id/imgCode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/qr"/>
