--- a/Registro/app/src/main/res/layout/healt_data_fragment.xml
+++ b/Registro/app/src/main/res/layout/healt_data_fragment.xml
@@ -66,7 +66,7 @@
                 android:textColorHint="@color/gray"
                 android:inputType="textEmailAddress"
                 android:singleLine="true"
-                android:text="hgallardo@hotmail.com"/>
+                android:text="75"/>
         </RelativeLayout>
 
 
