--- a/Registro/app/src/main/res/layout/counter_layout.xml
+++ b/Registro/app/src/main/res/layout/counter_layout.xml
@@ -10,20 +10,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
 
-        <ImageView
-            android:id="@+id/counterBackground"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/unread_background" />
 
         <TextView
             android:id="@+id/count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1"
-            android:textSize="8sp"
+            android:textSize="10sp"
+            android:padding="5dp"
             android:layout_centerInParent="true"
-            android:textColor="#FFFFFF" />
+            android:textColor="@color/green_text" />
     </RelativeLayout>
 
 </FrameLayout>
