--- a/Registro/app/src/main/res/layout/market_activity.xml
+++ b/Registro/app/src/main/res/layout/market_activity.xml
@@ -23,7 +23,13 @@
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:src="@drawable/buy"
+            android:layout_margin="16dp" />
     </FrameLayout>
 
 </LinearLayout>
