--- a/Registro/app/src/main/res/layout/counter_layout.xml
+++ b/Registro/app/src/main/res/layout/counter_layout.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/counterPanel"
-    android:layout_width="32dp"
-    android:layout_height="32dp"
-    android:background="@drawable/cart">
-
+    android:layout_width="24dp"
+    android:layout_height="24dp"
+    android:background="@color/green_toolbar">
     <RelativeLayout
         android:id="@+id/counterValuePanel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
         <TextView
             android:id="@+id/count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:text="1"
-            android:textSize="10sp"
+            android:textSize="15sp"
             android:padding="5dp"
-            android:layout_centerInParent="true"
-            android:textColor="@color/green_text" />
+            android:textStyle="bold"
+            android:textColor="@color/green_text"
+            android:gravity="center_vertical|center_horizontal"
+
+            />
+
     </RelativeLayout>
+
 
 </FrameLayout>
