--- a/Registro/app/src/main/res/layout/digital_code.xml
+++ b/Registro/app/src/main/res/layout/digital_code.xml
@@ -46,7 +46,7 @@
             android:layout_width="220dp"
             android:layout_height="match_parent"
             android:padding="25dp"
-            app:buttonText="FInalizar"
+            app:buttonText="Atras"
             app:buttonTextSize="25sp"
             app:buttonColor="@color/blueBorders"
             />
