--- a/Registro/app/src/main/res/layout/market_activity.xml
+++ b/Registro/app/src/main/res/layout/market_activity.xml
@@ -4,17 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/my_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/green_toolbar"
-        android:elevation="4dp"
-        android:layout_alignParentRight="true"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-        </android.support.v7.widget.Toolbar>
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
@@ -23,13 +13,23 @@
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end|bottom"
-            android:src="@drawable/buy"
-            android:layout_margin="16dp" />
+            android:layout_gravity="bottom|center"
+            android:paddingBottom="25dp">
+            <ru.dimorinny.floatingtextbutton.FloatingTextButton
+                android:id="@+id/action_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:floating_background_color="@color/green_toolbar"
+                app:floating_left_icon="@drawable/cart"
+                app:floating_title="Comprar"
+                android:layout_gravity="center_horizontal"
+                app:floating_title_color="@android:color/white"
+                />
+        </RelativeLayout>
+
     </FrameLayout>
 
 </LinearLayout>
