--- a/Registro/app/src/main/res/values/colors.xml
+++ b/Registro/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
     <color name="blueButtonsText">#6699FF</color>
     <color name="blueButtonsTransparent">#806699FF</color>
     <color name="red">#FF3333</color>
-    <color name="gray">#CCCCCC</color>
+    <color name="gray">#9c9b9b</color>
     <color name="border_activity_blue">#9999FF</color>
     <color name="dialog_background"> #CCFFFF</color>
     <color name="border_blue_button_white">#03A9F4</color>
