--- a/Registro/app/src/main/res/layout/healt_data_fragment.xml
+++ b/Registro/app/src/main/res/layout/healt_data_fragment.xml
@@ -64,12 +64,33 @@
                 android:background="@drawable/editext_line"
                 android:hint="@string/strPeso"
                 android:textColorHint="@color/gray"
-                android:inputType="textEmailAddress"
+                android:inputType="number"
                 android:singleLine="true"
                 android:text="75"/>
         </RelativeLayout>
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="15"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:orientation="horizontal" >
 
+            <com.jaredrummler.materialspinner.MaterialSpinner
+                android:id="@+id/spinnerGender"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/gray"
+                />
+            <View
+                android:layout_below="@+id/spinnerGender"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="-5dp"
+                android:background="@color/green_toolbar"/>
+
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
