--- a/Registro/app/src/main/res/layout/item.xml
+++ b/Registro/app/src/main/res/layout/item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="3dp"
-    android:background="@color/gray">
+    android:background="@color/white">
 
     <com.gjiazhe.scrollparallaximageview.ScrollParallaxImageView
         android:id="@+id/img"
