--- a/Registro/app/src/main/res/layout/personal_data_fragment.xml
+++ b/Registro/app/src/main/res/layout/personal_data_fragment.xml
@@ -102,7 +102,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="10"
-                android:background="@color/green_toolbar"/>
+                android:button="@color/black"/>
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
